# 3DVision

./: .gitignore  CMakeLists.txt  README.md
config/: pipeline_config.yaml
cuda/: depth_processing.cu  depth_processing.cuh  icp.cu  icp.cuh  pointcloud.cu  pointcloud.cuh
include/: camera.hpp  gl_viewer.hpp  gpu_depth.hpp  gpu_registration.hpp  pipeline.hpp  pipeline_config.hpp  registration.hpp  robot.hpp  segmentation.hpp  thread_pool.hpp
scripts/: check_build.sh  test_pipeline.sh
shaders/: axes.vert  pointcloud.frag  pointcloud.vert
src/: camera.cpp  gl_viewer.cpp  gpu_impl.cpp  main.cpp  pipeline.cpp  registration.cpp  robot.cpp  segmentation.cpp
